[gd_scene load_steps=16 format=3 uid="uid://ti4n5d5nwwpi"]

[ext_resource type="Script" path="res://generator/generator.gd" id="1_fjgta"]
[ext_resource type="Theme" uid="uid://cuevdh5m46808" path="res://assets/fonts/normal.tres" id="2_2bemc"]
[ext_resource type="Texture2D" uid="uid://cy8ixb7xri7pw" path="res://assets/Report/Report.png" id="3_ti85i"]
[ext_resource type="FontFile" uid="uid://cdjbwhckwxatn" path="res://assets/fonts/Childhood-Bold.otf" id="3_vadwe"]
[ext_resource type="Texture2D" uid="uid://c1s7mowljpc60" path="res://assets/icons/buttonclose.png" id="4_uhwsp"]
[ext_resource type="Texture2D" uid="uid://cei4aanvdavik" path="res://generator/letter.png" id="5_7pqky"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fip30"]
size = Vector2(457.143, 320)

[sub_resource type="Animation" id="Animation_fs4j3"]
resource_name = "Drawings"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Drawing:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(125.714, 145.714), Vector2(685.714, 145.714)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Drawing:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Drawing:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_xboi3"]
resource_name = "close"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(120, 90), Vector2(120, 130), Vector2(120, 200), Vector2(120, 664)]
}

[sub_resource type="Animation" id="Animation_plked"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(120, 664), Vector2(120, 200), Vector2(120, 130), Vector2(120, 90)]
}

[sub_resource type="Animation" id="Animation_bovg6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Drawing:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(125.714, 145.714)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Drawing:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Drawing:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("letter:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(102.857, 477.143)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("letter:z_index")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("letter:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_61pcg"]
resource_name = "Drawingclose"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Drawing:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(685.714, 145.714), Vector2(125.714, 145.714)]
}

[sub_resource type="Animation" id="Animation_gmflr"]
resource_name = "letterclose"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("letter:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(685.714, 488.571), Vector2(125.714, 488.571)]
}

[sub_resource type="Animation" id="Animation_1huca"]
resource_name = "lettershow"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("letter:position")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(102.857, 477.143), Vector2(685.714, 488.571)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("letter:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [-1, 0, 1, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("letter:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xxlrj"]
_data = {
"Drawingclose": SubResource("Animation_61pcg"),
"Drawings": SubResource("Animation_fs4j3"),
"RESET": SubResource("Animation_bovg6"),
"close": SubResource("Animation_xboi3"),
"letterclose": SubResource("Animation_gmflr"),
"lettershow": SubResource("Animation_1huca"),
"open": SubResource("Animation_plked")
}

[node name="ReportFile" type="Control"]
top_level = true
layout_mode = 3
anchor_right = 0.291667
anchor_bottom = 1.0
offset_left = 120.0
offset_top = 90.0
offset_right = 120.0
offset_bottom = 89.9985
grow_vertical = 2
scale = Vector2(0.7, 0.7)
script = ExtResource("1_fjgta")
metadata/_edit_use_anchors_ = true

[node name="Drawing" type="Sprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(125.714, 145.714)
scale = Vector2(1.2, 1.2)

[node name="Detection" type="Area2D" parent="."]
position = Vector2(685.714, 145.714)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
position = Vector2(0, 3.05176e-05)
shape = SubResource("RectangleShape2D_fip30")

[node name="Paper" type="Sprite2D" parent="."]
z_index = 3

[node name="TempBg" type="Sprite2D" parent="Paper"]
position = Vector2(708.571, 328.571)
texture = ExtResource("3_ti85i")
metadata/_edit_use_anchors_ = true

[node name="Profile" type="Control" parent="Paper/TempBg"]
layout_mode = 3
anchor_left = 0.0833333
anchor_top = 0.172222
anchor_right = 0.315625
anchor_bottom = 0.817593
offset_left = -960.0
offset_top = -540.0
offset_right = -960.0
offset_bottom = -540.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Name" type="RichTextLabel" parent="Paper/TempBg/Profile"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.0301291
anchor_right = 0.825112
anchor_bottom = 0.117647
theme = ExtResource("2_2bemc")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 35
text = "Name"
fit_content = true
scroll_active = false
autowrap_mode = 0
metadata/_edit_use_anchors_ = true

[node name="Data" type="RichTextLabel" parent="Paper/TempBg/Profile"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.17934
anchor_right = 0.565022
anchor_bottom = 0.360115
theme = ExtResource("2_2bemc")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 27
text = "Age: N.A
From: N.A
Height: N.A"
metadata/_edit_use_anchors_ = true

[node name="Story" type="RichTextLabel" parent="Paper/TempBg/Profile"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.408895
anchor_right = 0.903587
anchor_bottom = 0.836442
theme = ExtResource("2_2bemc")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
metadata/_edit_use_anchors_ = true

[node name="Decide" type="Button" parent="Paper/TempBg/Profile"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.179372
anchor_top = 0.836442
anchor_right = 0.742152
anchor_bottom = 0.918221
theme = ExtResource("2_2bemc")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 30
text = "Judge
"
flat = true
metadata/_edit_use_anchors_ = true

[node name="Close" type="Button" parent="Paper/TempBg/Profile"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.845613
anchor_top = -0.000408944
anchor_right = 0.977227
anchor_bottom = 0.0625752
offset_right = 528.3
offset_bottom = 395.1
scale = Vector2(0.1, 0.1)
icon = ExtResource("4_uhwsp")
flat = true
metadata/_edit_use_anchors_ = true

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xxlrj")
}

[node name="letter" type="Sprite2D" parent="."]
visible = false
z_index = -1
position = Vector2(102.857, 477.143)
texture = ExtResource("5_7pqky")

[node name="letter" type="RichTextLabel" parent="letter"]
offset_left = -217.143
offset_top = -80.0
offset_right = 239.857
offset_bottom = 126.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_vadwe")
theme_override_font_sizes/normal_font_size = 39
text = "Dear santa i want"

[connection signal="mouse_entered" from="Detection" to="." method="_on_detection_mouse_entered"]
[connection signal="mouse_exited" from="Detection" to="." method="_on_detection_mouse_exited"]
[connection signal="meta_clicked" from="Paper/TempBg/Profile/Story" to="." method="_on_story_meta_clicked"]
[connection signal="pressed" from="Paper/TempBg/Profile/Decide" to="." method="_on_decide_pressed"]
[connection signal="pressed" from="Paper/TempBg/Profile/Close" to="." method="_on_close_pressed"]
[connection signal="animation_finished" from="Animation" to="." method="_on_anim_animation_finished"]
